--- a/src/Joke.css
+++ b/src/Joke.css
@@ -2,4 +2,47 @@
 
 .Joke {
 	display: flex;
+	border-bottom: 2px solid #eeeeee;
+	align-items: center;
+	justify-content: center;
+	font-weight: 400;
+	padding: 1rem;
+}
+
+.Joke-btns {
+	display: flex;
+	margin-right: 1rem;
+	align-items: center;
+	justify-content: center;
+	width: 15%;
+}
+
+.Joke-text {
+	width: 75%;
+	font-size: 1.2rem;
+}
+
+.Joke-score {
+	width: 50px;
+	height: 50px;
+	line-height: 50px;
+	border-radius: 50%;
+	text-align: center;
+	border: 4px solid red;
+	font-size: 20px;
+	font-weight: 300;
+	box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.3);
+}
+
+.fa-circle-arrow-up,
+.fa-circle-arrow-down {
+	font-size: 1.5em;
+	margin: 5px;
+	cursor: pointer;
+}
+
+.Joke-smiley {
+	font-size: 3rem;
+	margin-left: auto;
+	border-radius: 50%;
 }
