--- a/src/JokeList.css
+++ b/src/JokeList.css
@@ -46,6 +46,12 @@
 	overflow: scroll;
 	width: 70%;
 	box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+.JokeList-jokes::-webkit-scrollbar {
+	display: none;
 }
 
 #preloader {
@@ -117,4 +123,33 @@
 		-ms-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
+}
+
+.JokeList-getmore {
+	margin: 2rem;
+	padding: 0.5rem 1.5rem;
+	border: none;
+	outline: none;
+	border-radius: 10px;
+	color: white;
+	font-size: 1.5rem;
+	font-weight: 700;
+	word-spacing: 0.3rem;
+	background: rgb(146, 236, 255);
+	background: linear-gradient(
+		135deg,
+		rgba(146, 236, 255, 1) 47%,
+		rgba(255, 128, 214, 1) 47%
+	);
+	box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
+	transition: 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.JokeList-getmore:hover {
+	/* color: #78909c; */
+	box-shadow: 0 19px 30px rgba(0, 0, 0, 0.25);
+}
+
+.JokeList-getmore:active {
+	transform: scale(0.98);
 }
