adding some animations

--- a/src/Joke.css
+++ b/src/Joke.css
@@ -41,8 +41,71 @@
 	cursor: pointer;
 }
 
+.fa-circle-arrow-up:hover {
+	animation-name: move-up;
+	animation-duration: 0.7s;
+	animation-timing-function: ease-out;
+	color: green;
+}
+
+@keyframes move-up {
+	0%,
+	50%,
+	100% {
+		transform: translateY(0);
+	}
+	25%,
+	75% {
+		transform: translateY(-3px);
+	}
+}
+
+.fa-circle-arrow-down:hover {
+	animation-name: move-down;
+	animation-duration: 0.7s;
+	animation-timing-function: ease-out;
+	color: red;
+}
+
+@keyframes move-down {
+	0%,
+	50%,
+	100% {
+		transform: translateY(0);
+	}
+	25%,
+	75% {
+		transform: translateY(3px);
+	}
+}
+
 .Joke-smiley {
 	font-size: 3rem;
 	margin-left: auto;
 	border-radius: 50%;
+}
+
+.Joke-smiley:hover {
+	animation-name: spin;
+	animation-duration: 0.7s;
+	animation-timing-function: ease-out;
+	animation-delay: 0s;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	30% {
+		transform: rotate(20deg);
+	}
+	60% {
+		transform: rotate(0deg);
+	}
+	80% {
+		transform: rotate(10deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
 }
